Fix PAT issues and make stub for mcp handler
